<resources>
    <string name="app_name">ForumAndroid</string>
    <string name="log_in">Log in</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="create_account">Create account</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_up_prop">Don\'t have an account?
        Sign up</string>
    <string name="write_message">Write message…</string>
    <string name="send">Send</string>
    <string name="create">Create</string>
    <string name="enter_title">Enter topic title…</string>
    <string name="write_first_message">Write your first message…</string>
    <string name="action_settings">ADjndajdajk</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="account">Account</string>
    <string name="log_out">Log out</string>
    <string name="settings">Settings</string>
</resources>