<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context=".fragment.SettingsFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_marginVertical="10dp"
        android:padding="6dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="30sp"
        android:textStyle="bold"
        android:text="@string/account" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_marginBottom="10dp"
            android:paddingVertical="6dp"
            android:paddingStart="10dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:textSize="20sp"
            android:layout_weight="0.3"
            android:text="@string/username" />

        <TextView
            android:id="@+id/username"
            android:layout_marginBottom="10dp"
            android:padding="6dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:textSize="20sp"
            android:layout_weight="0.7" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_marginBottom="10dp"
            android:paddingVertical="6dp"
            android:paddingStart="10dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:textSize="20sp"
            android:layout_weight="0.3"
            android:text="@string/email" />

        <TextView
            android:id="@+id/email"
            android:layout_marginBottom="10dp"
            android:padding="6dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:textSize="20sp"
            android:layout_weight="0.7" />
    </LinearLayout>

    <Button
        android:id="@+id/logOutButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/log_out">

    </Button>


</LinearLayout>