<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/inputTopic"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background"
    android:orientation="vertical">

    <EditText
        android:id="@+id/titleInput"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="6dp"
        android:layout_marginEnd="6dp"
        android:layout_marginTop="10dp"
        android:paddingVertical="14dp"
        android:paddingHorizontal="14dp"
        android:textSize="14sp"
        android:background="@drawable/background_message"
        android:hint="@string/enter_title">
    </EditText>
    <EditText
        android:id="@+id/textInput"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="6dp"
        android:layout_marginEnd="6dp"
        android:layout_marginVertical="10dp"
        android:paddingVertical="14dp"
        android:paddingHorizontal="14dp"
        android:textSize="14sp"
        android:background="@drawable/background_message"
        android:hint="@string/write_first_message">
    </EditText>
    <Button
        android:id="@+id/createButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:background="@drawable/background_rounded"
        android:layout_marginHorizontal="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/create">

    </Button>

</LinearLayout>
